src/wwwroot/css/site.css
@import url(http://fonts.googleapis.com/css?family=Montserrat:400,300,700);
@import url(http://fonts.googleapis.com/css?family=Asap:400,300,700);


html {
    position: relative;
    min-height: 100%;
    font-size: 14px;
}

body {
    /* Move down content because we have a fixed navbar that is 3.5rem tall */
    padding-top: 3.5rem;
    /* Margin bottom by footer height */
    margin-bottom: 4.5rem;
    font-family: 'Montserrat', sans-serif !important;
    background-image: linear-gradient(120deg, #fdfbfb 0%, #ebedee 100%);

}

.bg-dark {

    background-color: #343A40 !important;
    background-image: url('../images/prism.png');
    background-repeat: repeat;
}

h1, h2, .navbar-brand {
    font-family: 'Asap', serif !important;
}

h1 a, h1 a:active, h1 a:visited, h1 a:hover,
h2 a, h2 a:active, h2 a:visited, h2 a:hover {
    text-decoration: none;
    color: inherit
}

.article h2 {
    margin-top: 3.5rem;
}

.search-btn, .search-btn:active, .search-btn:visited {
    color: rgba(255,255,255,.5);
}

.search-btn:hover {
    color: rgba(255,255,255,.75);
}

.jumbotron-main {
    background: url('../images/cristian-palmer-716730-unsplash.jpg'); 
    background-size: 100% auto !important;  
    background-position: center !important; 
    padding-top: 5rem;
    padding-bottom: 5rem;
    height: 20rem;
    border-radius: 0 !important;
}

.footer {
    position: absolute;
    bottom: 0;
    width: 100%;
    /* Set the fixed height of the footer here */
    height: 3.5rem;
}

.card{
    overflow: hidden;
    margin-bottom: 2rem;
    width: 100%;
    background-color: #f9fcff;
}

.card-img-wrapper {
    position: relative;
    overflow: hidden;
    height: 10rem;
}

.card-img-wrapper:after {
    content: '';
    display: block;
    padding-top: 100%;
}

.card-img-wrapper img {
    height: auto;
    width: 100%;
    max-height: none;
    position: absolute;
    top: 50%;
    left: 0;
    transform: translateY(-50%);
}

.card-footer {
    background-color: #f9fcff;
    border-top: none;
}

.jumbo-overlaid {
    margin-top: -10rem;
    background-color: #f9fcff;
    padding-top: 1.5rem;
    min-height: 100%;
}

.avatar {
    width: 5rem;
    height: 5rem;
    border-radius: 50% !important;
}

.card .avatar {
    position: absolute;
    top: 6.5rem;
    right: 1rem;
}

.card .byline {
    font-size: 0.9rem;
    margin-top: -0.5rem;
    padding-bottom: 0.5rem;
}

.credit {
    text-align: right;
    position: absolute;
    right: 1rem;
    top: 4rem;
}

.credit i{
    opacity: 0.5;
}

.credit .creditText{
    opacity: 0.0;
    -webkit-transition: all 2000ms ease;
    -moz-transition: all 2000ms ease;
    -ms-transition: all 2000ms ease;
    -o-transition: all 2000ms ease;
    transition: all 2000ms ease;
}

.credit .creditText:hover{
    opacity: 1.0;
}

.credit i:hover + .creditText {
    opacity: 1.0;
}

